--- a/kwitter.css
+++ b/kwitter.css
@@ -11,8 +11,9 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 .header
 {
-	color: white;font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
+	color: blue: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
 }
+
 .header img
 {
 	width: 80px;margin-left: -15px;
@@ -20,7 +21,7 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 .login_div
 {
-	background: rgba(255,255,255,0.8);float: none;border-radius: 15px;
+	background: rgba(255, 255, 255, 0.8);float: none;border-radius: 15px;
 }
 
 .logo
@@ -48,7 +49,7 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 #output
 {
-	padding: 10px; width:80%;background: rgba(255,255,255,0.8);border-radius: 15px;
+	padding: 10px; width:80%;background: rgba(255, 255, 255, 0.8);border-radius: 15px;
 }
 
 .input_div_room_page
@@ -68,7 +69,7 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 }
 .input_div_message_page label
 {
-	color: black;
+	color: rgb(0, 0, 0);
 }
 .input_div_message_page #msg
 {
@@ -81,7 +82,7 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 }
 .color_white
 {
-	color: white
+	color: rgb(255, 255, 255)
 }
 
 .user_tick
@@ -90,5 +91,5 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 }
 .message_h4
 {
-	padding-left:5px;color:grey;
+	padding-left:5px;color:rgb(128, 128, 128);
 }
