--- a/kwitter.css
+++ b/kwitter.css
@@ -11,7 +11,10 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 .header
 {
-	color: blue: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
+	color: blue;
+	 'Yeon Sung';font-size;
+	 45px;letter-spacing;
+	  10px;margin-top: 80px;;
 }
 
 .header img
